[package]
name = "testing"
version = "0.0.0"
description = "This library aids in processing binary encoded data."
readme = "README.md"
repository = "https://github.com/nikdeapen/testing"
homepage = "https://github.com/nikdeapen/testing"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"

[dependencies]
